<resources>
    <string name="app_name">App65</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone1_label">Phone #1:</string>
    <string name="phone2_label">Phone #2:</string>
    <string name="email1_label">E-mail #1:</string>
    <string name="email2_label">E-mail #2:</string>
    <string name="description_label">Description:</string>
    <string name="big_photo">Big photo</string>
    <string name="photo">Photo</string>
    <string name="contact_list_fragment_title">Contact list</string>
    <string name="contact_details_fragment_title">Contact details</string>
    <string name="loading_msg">Loading...</string>
    <string name="birthday_label">Birthday:</string>
    <string name="birthday_msg">Today is birthday for</string>
    <string name="set_alarm_msg">Birthday reminder set!</string>
    <string name="cancel_alarm_msg">Birthday reminder canceled!</string>
    <string name="remindBtnOn_msg">Remind On</string>
    <string name="remindBtnOff_msg">Remind Off</string>
    <string name="notification_channel_name">App65 messages</string>
    <string name="notification_channel_description">Birthday Reminders</string>
    <string name="notification_title">Do not forget!</string>
    <string name="notification_let_see_msg">See the notification!</string>
    <string name="permissions_request_introduction_title">Permissions required</string>
    <string name="permissions_request_introduction_msg">Now you will be asked for permissions, without which the application will not be able to work. Please confirm all requested permissions.</string>
    <string name="permissions_request_epilogue_title">Permissions required</string>
    <string name="permissions_request_epilogue_msg">Please accept all requested permissions. Without them, the application can not work.</string>
    <string name="permissions_request_epilogue_ok_btn">Grant permissions</string>
    <string name="permissions_request_epilogue_cancel_btn">No, exit the app</string>
    <string name="search_view_title">Search</string>
    <string name="contacts_not_found_msg">Contacts not found</string>
</resources>